# start_suanfa

./: .gitignore  24.js  CMakeLists.txt  README.md  Suduku.js  game.js  log  package.json  sudoku.cpp  sudoku_from_c.js  sudoku_list.js
libs/: sudoku.go  sudoku.js  sudoku.py  sudoku_es5.js
maps/: index.js
source/c/: .gitignore  CMakeLists.txt  Makefile
source/c++/: CMakeLists.txt
source/c/src/: main.c
source/c/src/libs/: sudoku.c  sudoku.h
src/: main.cpp
src/libs/: sudoku.cpp  sudoku.h
